--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>TicTacToe</title>
+  <title>Go</title>
   <meta name="description" content="TicTacToe game">
   <link rel="shortcut icon"type="image/x-icon" href="data:image/x-icon;,"><!-- Suppress browser request for favicon.ico -->
 
@@ -98,36 +98,21 @@
   </div>
 
 <div id="gameArea">
-
-  <div ng-repeat="row in [0, 1, 2]"
-      style="position:absolute; top:{{row * 33}}%; left:0; width:100%; height:33%;">
-    <div ng-repeat="col in [0, 1, 2]"
-        style="position:absolute; top:0; left:{{col * 33}}%; width:33%; height:100%;"
-        ng-class="{r: col < 2, b: row < 2}"
+  <div id="container">
+    <div ng-repeat="row in game.getNumber(13) track by $index"
+    style="position:absolute; top:{{row*7.6923}}%; left:0; width:7.6923%; height:7.6923%;" >
+        <div ng-repeat="col in game.getNumber(13) track by $index"
+        ng-class="game.getTurn()"
         ng-click="game.cellClicked(row, col)"
-        id="{{'e2e_test_div_' + row + 'x' + col}}">
-      <div style="width:100%; height: 100%"
-          ng-class="{slowlyAppear: game.shouldSlowlyAppear(row, col)}"
-          ng-if="game.shouldShowImage(row, col)">
-        <svg ng-if="game.isPieceO(row, col)"
-            id="{{'e2e_test_pieceO_' + row + 'x' + col}}"
-            width="100%" height="100%">
-          <circle cx="50%" cy="50%" r="27%"
-            stroke="blue" stroke-width="5%" fill="white" />
-        </svg>
-        <svg ng-if="game.isPieceX(row, col)"
-            id="{{'e2e_test_pieceX_' + row + 'x' + col}}"
-            width="100%" height="100%">
-          <line x1="25%" y1="25%"
-                x2="75%" y2="75%"
-                stroke="red"
-                stroke-width="5%"/>
-          <line x1="25%" y1="75%"
-                x2="75%" y2="25%"
-                stroke="red"
-                stroke-width="5%"/>
-        </svg>
-      </div>
+        style="position:absolute; top:0; left:{{col*100}}%; width:100%; height:100%;" >
+            <div style="width:100%; height:100%"
+            ng-if="game.shouldShowImage(row,col)">
+                <img alt="whiteStone"ng-if="game.isPieceWhite(row,col)"
+                src="css/whiteStone.svg" style="width:100%; height:100%" />
+                <img alt="blackStone" ng-if="game.isPieceBlack(row,col)"
+                src="css/blackStone.svg" style="width:100%; height:100%" />
+            </div>
+        </div>
     </div>
   </div>
 </div>
