--- a/index.html
+++ b/index.html
@@ -96,7 +96,12 @@
       </div>
     </div>
   </div>
-
+<div id="pass">
+    <p>Turn: {{ game.getTurn() }}</p>
+    <p>White Score: {{ game.getWhiteScore() }}</p>
+    <p>Black Score: {{ game.getBlackScore() }}</p>
+    <input type="button" value="Pass" ng-click="game.cellClicked(-1,-1)" />
+</div>
 <div id="gameArea">
   <div id="container">
     <div ng-repeat="row in game.getNumber(13) track by $index"
