--- a/index.html
+++ b/index.html
@@ -100,32 +100,31 @@
     <p>Turn: {{ game.getTurn() }}</p>
     <p>White Score: {{ game.getWhiteScore() }}</p>
     <p>Black Score: {{ game.getBlackScore() }}</p>
+    <input id="resign" type="button" value="Resign" ng-click="game.resign(game.getTurn())" />
     <input id="passB" type="button" value="Pass" ng-click="game.cellClicked(-1,-1)" />
     <input class="ph" type="button" value="State" />
 </div>
 <div id="gameArea">
-  <div id="container"
-  ng-if="game.isGameOngoing()">
+  <div id="container">
     <div ng-repeat="row in game.getNumber(13) track by $index"
-    style="position:absolute; top:{{row*7.6923}}%; left:0; width:7.6923%; height:7.6923%;" >
+    style="position:absolute; top:{{row*100/13}}%; left:0; width:{{100/13}}%; height:{{100/13}}%;" >
         <div ng-repeat="col in game.getNumber(13) track by $index"
         ng-class="game.getTurn()"
         ng-click="game.cellClicked(row, col)"
         style="position:absolute; top:0; left:{{col*100}}%; width:100%; height:100%;" >
             <div style="width:100%; height:100%"
             ng-if="game.shouldShowImage(row,col)">
-                <img alt="whiteStone"ng-if="game.isPieceWhite(row,col)"
+                <img alt="whiteStone" ng-if="game.isPieceWhite(row,col)"
                 src="css/whiteStone.svg" style="width:100%; height:100%" />
                 <img alt="blackStone" ng-if="game.isPieceBlack(row,col)"
                 src="css/blackStone.svg" style="width:100%; height:100%" />
+                <img alt="whiteTerr" ng-if="game.isPieceWhiteTerritory(row,col)"
+                src="css/whiteTerr.svg" style="width:100%; height:100%" />
+                <img alt="blackTerr" ng-if="game.isPieceBlackTerritory(row,col)"
+                src="css/blackTerr.svg" style="width:100%; height:100%" />
             </div>
         </div>
     </div>
-  </div>
-  <div ng-if="game.isGameOver()">
-    <p>Winner: {{ game.getWinner() }} </p>
-    <p>White Score: {{ game.getFinalWhiteScore() }}</p>
-    <p>Black Score: {{ game.getFinalBlackScore() }}</p>
   </div>
 </div>
 
