--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     {{ 'RULES_SLIDE1' | translate }}
                   </td>
                   <td>
-                    <img src="imgs/HelpSlide1.png" alt="Help slide 1" style="height:100px;">
+                    <img src="imgs/go.png" alt="Help slide 1" style="height:100px;">
                   </td>
                 </tr>
               </table>
@@ -81,7 +81,31 @@
                   {{ 'RULES_SLIDE2' | translate }}
                   </td>
                   <td>
-                    <img src="imgs/HelpSlide2.png" alt="Help slide 2" style="height:100px;">
+                    <img src="imgs/capturing.png" alt="Help slide 2" style="height:100px;">
+                  </td>
+                </tr>
+              </table>
+            </slide>
+            <slide>
+              <table>
+                <tr>
+                  <td id="e2e_test_rules_slide3_text">
+                  {{ 'RULES_SLIDE3' | translate }}
+                  </td>
+                  <td>
+                    <img src="imgs/ko.png" alt="Help slide 2" style="height:100px;">
+                  </td>
+                </tr>
+              </table>
+            </slide>
+            <slide>
+              <table>
+                <tr>
+                  <td id="e2e_test_rules_slide4_text">
+                  {{ 'RULES_SLIDE4' | translate }}
+                  </td>
+                  <td>
+                    <img src="imgs/scoring.png" alt="Help slide 2" style="height:100px;">
                   </td>
                 </tr>
               </table>
@@ -97,18 +121,21 @@
     </div>
   </div>
 <div id="pass">
-    <p>Turn: {{ game.getTurn() }}</p>
-    <p>White Score: {{ game.getWhiteScore() }}</p>
-    <p>Black Score: {{ game.getBlackScore() }}</p>
     <input id="resign" type="button" value="Resign" ng-click="game.resign(game.getTurn())" />
     <input id="passB" type="button" value="Pass" ng-click="game.cellClicked(-1,-1)" />
-    <input class="ph" type="button" value="State" />
+    <p ng-if="game.isGameOver()" style="color:red">This game has ended</p>
 </div>
 <div id="gameArea">
-  <div id="container">
-    <div ng-repeat="row in game.getNumber(13) track by $index"
-    style="position:absolute; top:{{row*100/13}}%; left:0; width:{{100/13}}%; height:{{100/13}}%;" >
-        <div ng-repeat="col in game.getNumber(13) track by $index"
+  <div id="boardSize">
+          <input type="submit" value="Play 9x9" ng-click="game.setBoardSize(9)" />
+          <input type="submit" value="Play 13x13" ng-click="game.setBoardSize(13)" />
+          <input type="submit" value="Play 19x19" ng-click="game.setBoardSize(19)" />
+  </div>
+  <div id="container" class="{{'container'+game.boardSize}}">
+    <div ng-repeat="row in game.getNumber(game.boardSize) track by $index"
+    style="position:absolute; top:{{row*100/game.boardSize | number:5}}%; left:0;
+    width:{{100/game.boardSize | number:5}}%; height:{{100/game.boardSize | number:5}}%;" >
+        <div ng-repeat="col in game.getNumber(game.boardSize) track by $index"
         ng-class="game.getTurn()"
         ng-click="game.cellClicked(row, col)"
         style="position:absolute; top:0; left:{{col*100}}%; width:100%; height:100%;" >
