--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>Go</title>
-  <meta name="description" content="TicTacToe game">
+  <meta name="description" content="Go game">
   <link rel="shortcut icon"type="image/x-icon" href="data:image/x-icon;,"><!-- Suppress browser request for favicon.ico -->
 
   <!-- To ensure CSS files are downloaded in parallel, always include external CSS before external JavaScript. -->
@@ -57,7 +57,7 @@
         <div class="modal-header">
           <button type="button" class="close" ng-click="game.isHelpModalShown = false" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           <h4 id="e2e_test_rules_title" class="modal-title">
-            {{ 'RULES_OF_TICTACTOE' | translate }}
+            {{ 'RULES_OF_GO' | translate }}
           </h4>
         </div>
         <div class="modal-body">
@@ -136,8 +136,8 @@
     style="position:absolute; top:{{row*100/game.boardSize | number:5}}%; left:0;
     width:{{100/game.boardSize | number:5}}%; height:{{100/game.boardSize | number:5}}%;" >
         <div ng-repeat="col in game.getNumber(game.boardSize) track by $index"
-        ng-class="game.getTurn()"
         ng-click="game.cellClicked(row, col)"
+        ng-class="{slowlyAppear: game.shouldSlowlyAppear(row, col)}"
         id=" {{'e2e_test_div_' + row + 'x' + col}}"
         style="position:absolute; top:0; left:{{col*100}}%; width:100%; height:100%;" >
             <div style="width:100%; height:100%"
